# fueleu-pool-optimiser

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: FAQ.md  METHODOLOGY.md  VERIFICATION.md
examples/: sample_fleet.csv
src/fueleu_pool/: __init__.py  cost_model.py  fuels.py  io_csv.py  optimiser.py  regulation.py
tests/: test_optimiser.py  test_regulation.py
