[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fueleu-pool-optimiser"
version = "0.1.0"
description = "Lowest-cost FuelEU Maritime fleet compliance: pooling, fuel-switch and penalty optimisation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["pulp>=3.0", "streamlit>=1.30", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
